# EGA-V9

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json  quick-start.cjs
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml  reproducibility_report.yml
.github/workflows/: scorp-lock-4-core-engine-protection.yml
audit/: local-1.0.0-package-metadata-audit.txt  local-1.0.0-sdk-build-test-audit.txt  npm-registry-current-state.txt
benchmarks/: build-cost-table.py  build-runtime-table.py  runtime-performance-benchmark.cjs
benchmarks/approval-bypass/: approval-bypass.test.mjs
benchmarks/fail-closed-containment/: fail-closed-containment.test.mjs
benchmarks/replay-root/: replay-root-change.test.mjs
benchmarks/results/: runtime-performance-results.json  runtime-performance-table.csv  runtime-performance-table.md  (+6 more)
crates/runtime-core/: Cargo.toml
crates/runtime-core/examples/: runtime_benchmark.rs  runtime_cost_benchmark.rs
crates/runtime-core/src/: lib.rs
dashboard/: index.html
docs/: NPM_PUBLISH_STRATEGY.md  PUBLICATION_VERIFICATION.md  RELEASE_GATE_V1.md  REPRODUCING_THE_PAPER.md  RUNTIME_ARCHITECTURE.md
ega-v9/: package-lock.json
publication/: manifest.json
scripts/: build-table4.cjs  check-v1-api-contract.cjs  release-gate.cjs  stage-b-engine-gate.cjs  stage-c-benchmark-gate.cjs  stage-d-table-consistency-gate.cjs  stage-e-publication-consistency-gate.cjs  v1-benchmark-gate.cjs
security/: SCORP_LOCK_1.md  SCORP_LOCK_4_CORE_ENGINE_CHANGE_PROTECTION.md
(+44 files in other folders)
